# vrsh

./: .gitignore  Cargo.toml  README.md  history.txt  lalrpop-build.rs
changelogs/: template.md  v0.1.0_210530_initial-release.md  v0.2.0_TBD_prompt-upgrades.md
src/: expansions.lalrpop  grammar.lalrpop  main.rs  prompt.lalrpop  replacements.lalrpop
src/shell/: colors.rs  command.rs  handle_command.rs  mod.rs  parse_command.rs  prompt.rs  rl_helper.rs
src/shell/built_ins/: alias.rs  cd.rs  errors.rs  execute_command.rs  mod.rs  set_variable.rs
src/shell/common/: colors.rs  mod.rs  prompt_types.rs  search_path.rs  state.rs  types.rs
src/shell/prompt/: mod.rs  prompt.rs  prompt_types.rs
src/shell/prompt/modules/vcs/git/: git.rs
