[package]
name = "vrsh"
version = "0.1.0"
authors = ["Vidar Magnusson <git@vidarmagnusson.com>"]
edition = "2018"

build = "lalrpop-build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"
rustyline-derive = "0.4.0"
lalrpop-util = "0.19.5"
regex = "1.4.5"

[build-dependencies]
lalrpop = "0.19.5"