[package]
name = "vrsh"
version = "0.1.2"
authors = ["Vidar Magnusson <crates.io@vidarmagnusson.com>"]
edition = "2018"
description = "A simple shell written for my own learning."
license = "AGPL-3.0"

build = "lalrpop-build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.0.0"
rustyline-derive = "0.4.0"
lalrpop-util = "0.19.5"
regex = "1.4.5"
signal-hook = "0.3.8"
termion = "1.5.6"
git2 = "0.13"

[build-dependencies]
lalrpop = "0.19.5"
